# jira-cli

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
scripts/: install.ps1  install.sh  render-homebrew-formula.sh  validate-skills.py
skills/jira/: SKILL.md
skills/jira/agents/: openai.yaml
skills/jira/references/: commands.md
src/: adf.rs  app.rs  cli.rs  config.rs  jira_cloud.rs  lib.rs  main.rs  secret.rs  ui.rs
src/app/: agile.rs  auth.rs  context.rs  issue.rs  meta.rs  support.rs
tests/: cli.rs
tests/cli/: auth_context.rs  common.rs  issue_advanced.rs  issue_mutations.rs  issue_queries.rs  planning.rs
